protox/tests/snapshots/compiler__import_error.snap
---
source: protox/tests/compiler.rs
expression: "check_err(&[(\"root.proto\", \"import 'customerror.proto';\")])"
---
causes: []
labels: []
message: failed to load file!
related: []
severity: error

